using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class MyConst : MonoBehaviour
{
    public const string IDLE = "idle";
    public const string RUN = "run";
    public const string JUMP = "jump";
    public const string FALL = "fall";
    public const string ATTACK = "attack";
    public const string THROW = "throw";
    public const string DIE = "die";
    public const string COIN = "Coin";
    public const string COINS_COLLECTED = "coinsCollected";
    public const string HIGHSCORE = "highscore";
    public const string DEATHZONE = "Deathzone";
    public const string ENEMY_WALL = "EnemyWall";
    public const string PLAYER = "Player";
    public const string ENEMY = "Enemy";
    public const string ON = "On";
    public const string OFF = "Off";
    public const string LEVEL = "Level";
}
